# dangling_commits

./: .gitignore  README.md  pyproject.toml
src/dangling_commits/: __main__.py
src/dangling_commits/domain/: enums.py  exceptions.py  utils.py
src/dangling_commits/domain/git_objects/: __init__.py  blob.py  branch.py  commit.py  git_object.py  tree.py
src/dangling_commits/domain/interfaces/: __init__.py  git_repository.py
src/dangling_commits/infra/: __init__.py  github.py  gitlab.py
